test/tests/compiler/6_statements_and_conditional_expressions/valid/ternary_rh_binop.plx





pub fn main(none) i32 {
    return ? 0 then 1 else 0 or 2
}
