test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/plx1_elif_after_else.plx
pub fn main(none) i32 {
    if false {
        return 1   
    } 
    else {
        return 0
    } 
    elif 1 {
        return 2
    }
}
